--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "homepage": "https://github.com/robgraeber/photowall-react",
   "authors": [
-    "Rob Graeber <bgraeber@gmail.com>"
+    "Rob Graeber <noreply@example.com>"
   ],
   "license": "MIT",
   "ignore": [
